# project_practice

./: .gitignore  README.md  conftest.py  index.html  pyproject.toml
.github/workflows/: action.yml
21/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
21/export/: influxDbData.txt  prometheusData.txt
21/history/: duration-trend.json  history-trend.json  history.json
21/widgets/: executors.json  severity.json  status-chart.json  suites.json  summary.json
22/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
22/export/: influxDbData.txt  prometheusData.txt
22/history/: categories-trend.json  history.json  retry-trend.json
22/widgets/: duration-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
23/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
23/export/: influxDbData.txt  prometheusData.txt
23/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
23/widgets/: duration.json  environment.json  executors.json  severity.json  summary.json
24/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  (+1 more)
last-history/: categories-trend.json  retry-trend.json
pages/: checkout_overview.py  checkout_page.py  customer_information.py  inventory_page.py  login_logout_page.py  shopping_cart_page.py
tests/: test_e2e.py  test_inventory_page.py  test_shopping_cart_page.py
utilities/: BaseClass.py  inventory.py
(+151 files in other folders)
